--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>  
-	      <url>http://54.87.250.193:8088/mylandmarktech/repository/boa-releases/</url>
+	      <url>http://18.223.212.130:8081/repository/test_pipeline_release/</url>
 		    
 		          
 	    </repository>
@@ -105,12 +105,12 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.87.250.193:8088/mylandmarktech/repository/boa-snapshot/</url>
+	      <url>http://18.223.212.130:8081/repository/test_pipeline_snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
 	<build>
-		<finalName>boa-javaweb-app</finalName>
+		<finalName>test_pipeline</finalName>
 		
 		<plugins>
 			<plugin>
